added new projects

--- a/Offnote.html
+++ b/Offnote.html
@@ -69,47 +69,42 @@
 		<br>
 
 		<div class="img-container">
-			<img src="images/dayNight.png">
+			<img src="images/Offnote.jpg">
 		</div>
 		
-		<h3>Weather Application</h3>
+		<h3>Notes Mobile Application</h3>
 
-		<p>This was a project I started back in July 2019 when I first learned swift.
+		<p>
+		The application provides the user with the ability to create notes offline.
 		<br>
 		<br>
-		The application provides the user with hourly and daily weather forecasts.
+		Some features of the application include voice notes, image notes, and custom note colors.
 		<br>
 		<br>
-		One of the unique features of the app is the quick glance widget which adapts to the current weather conditions and time of the day. 
-		<br>
-		<br>
-		Additional features include moon phases and visibility.
+		All notes taken using the application are encrypted and stored on-device only.
 		<br>
 
 		<h5>Technologies:</h5>
 		<ul>
-			<li>- Swift</li>
-			<li>- Storyboards</li>
-			<li>- Tommorow.io Weather Forcast API</li>
+			<li>- Kotlin</li>
+			<li>- Room Database</li>
+			<li>- Glide</li>
 		</ul>
 
 		<h5>Screenshots</h5>
 		<div class="row">
 			<div class="column">
-			  <img src="images/daynight-sr1.jpg" alt="Snow" style="width:100%">
+			  <img src="images/Offnote-sr1.jpg" alt="Snow" style="width:100%">
 			</div>
 
 			<div class="column">
-			  <img src="images/daynight-sr2.jpg" alt="Forest" style="width:100%">
+			  <img src="images/Offnote-sr2.jpg" alt="Forest" style="width:100%">
 			</div>
 
 			<div class="column">
-			  <img src="images/daynight-sr3.jpg" alt="Mountains" style="width:100%">
+			  <img src="images/Offnote-sr3.jpg" alt="Mountains" style="width:100%">
 			</div>
 
-			<div class="column">
-				<img src="images/daynight-sr4.jpg" alt="Mountains" style="width:100%">
-			  </div>
 		</div>
 			
 
